--- a/1HTML.html
+++ b/1HTML.html
@@ -12,9 +12,9 @@
     </h1>
 
     <ol>
-        <li><a href="1,2,3/1HTML.html">HTML</a></li>
-        <li><a href="1,2,3/2CSS.html">CSS</a></li>
-        <li><a href="1,2,3/3JavaScript.html">JavaScript</a></li>
+        <li><a href="1HTML.html">HTML</a></li>
+        <li><a href="2CSS.html">CSS</a></li>
+        <li><a href="3JavaScript.html">JavaScript</a></li>
     </ol>
 
     <h2>HTML이란 무엇인가?</h2>
