--- a/1HTML.html
+++ b/1HTML.html
@@ -22,7 +22,7 @@
             <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" title="HTML5 specification">Hypertext Markup Language(HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
         </p>
         
-        <img src="1,2,3/coding.jpg" width="100%">
+        <img src="coding.jpg" width="100%">
 
         <p style="margin-top: 40px;">
             HTML elements are the building blocks of HTML pages. With HTML constructs, images and other
