--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>WEB1 - HTML</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P394L308F2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-P394L308F2');
+    </script>
   </head>
 
   <body>
@@ -16,7 +25,7 @@
     </ol>
 
     <h2>WEB이란 무엇인가?</h2>
-    <p style="margin-top: 40px">
+      <p style="margin-top: 40px">
       The World Wide Web (WWW), commonly known as the Web, is the world's
       dominant software platform.[1] It was originally a hypertext document
       management system[2] accessed over the Internet.[3] The resources of the
