--- a/1HTML.html
+++ b/1HTML.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>WEB1 - HTML</title>
-    <link rel="stylesheet" href="style.css" />   
+    <link rel="stylesheet" href="style.css" />  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P394L308F2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-P394L308F2');
+    </script> 
   </head>
 
   <body>
@@ -17,31 +26,67 @@
       </ol>
 
     <div id="article">
-    <h2>HTML이란 무엇인가?</h2>
-    <p style="margin-top: 40px">
-      <a
-        href="https://www.w3.org/TR/2011/WD-html5-20110405/"
-        title="HTML5 specification"
-        >Hypertext Markup Language(HTML)</a
-      >
-      is the standard markup language for
-      <strong>creating <u>web</u> pages</strong> and web applications. Web
-      browsers receive HTML documents from a web server or from local storage
-      and render the documents into multimedia web pages. HTML describes the
-      structure of a web page semantically and originally included cues for the
-      appearance of the document.
-    </p>
+        <h2>HTML이란 무엇인가?</h2>
+            <p style="margin-top: 40px">
+                <a
+                href="https://www.w3.org/TR/2011/WD-html5-20110405/"
+                title="HTML5 specification" target="_blank">Hypertext Markup Language(HTML)</a>
+                is the standard markup language for
+                <strong>creating <u>web</u> pages</strong> and web applications. Web
+                browsers receive HTML documents from a web server or from local storage
+                and render the documents into multimedia web pages. HTML describes the
+                structure of a web page semantically and originally included cues for the
+                appearance of the document.
+            </p>
 
     <img src="coding.jpg" width="97%" />
 
-    <p style="margin-top: 40px">
-      HTML elements are the building blocks of HTML pages. With HTML constructs,
-      images and other objects such as interactive forms may be embedded into
-      the rendered page. HTML provides a means to create structured documents by
-      denoting structural semantics for text such as headings, paragraphs,
-      lists, links, quotes and other items. HTML elements are delineated by
-      tags, written using angle brackets.
-    </p>
+            <p style="margin-top: 40px">
+                HTML elements are the building blocks of HTML pages. With HTML constructs,
+                images and other objects such as interactive forms may be embedded into
+                the rendered page. HTML provides a means to create structured documents by
+                denoting structural semantics for text such as headings, paragraphs,
+                lists, links, quotes and other items. HTML elements are delineated by
+                tags, written using angle brackets.
+            </p>
     </div>
+
+    <p><div id="disqus_thread"></div>
+      <script>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://web-4mzxftt5mm.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
+  
+  <p>
+      <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+        var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+       (function(){
+       var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+       s1.async=true;
+       s1.src='https://embed.tawk.to/624facb3c72df874911df9f6/1g03jl7e1';
+       s1.charset='UTF-8';
+       s1.setAttribute('crossorigin','*');
+       s0.parentNode.insertBefore(s1,s0);
+        })();
+     </script>
+     <!--End of Tawk.to Script-->
+    </p>
   </body>
+
 </html>
