--- a/index.html
+++ b/index.html
@@ -13,11 +13,47 @@
         gtag('js', new Date());
 
         gtag('config', 'G-P394L308F2');
+
+        var Body = {
+                setColor: function (color) {
+                    document.querySelector("body").style.color = color;
+                },
+                setBackgroundColor: function (color) {
+                    document.querySelector("body").style.backgroundColor =
+                        color;
+                },
+            };
+            var Links = {
+                setColor: function (color) {
+                    var alist = document.querySelectorAll("a");
+                    var i = 0;
+                    while (i < alist.length) {
+                        alist[i].style.color = color;
+                        i = i + 1;
+                    }
+                },
+            };
+
+            function nightDayHandler(self) {
+                var target = document.querySelector("body");
+                if (self.value === "night") {
+                    Body.setBackgroundColor("black");
+                    Body.setColor("white");
+                    self.value = "day";
+                    Links.setColor("powderblue");
+                } else {
+                    Body.setBackgroundColor("white");
+                    Body.setColor("black");
+                    self.value = "night";
+                    Links.setColor("blue");
+                }
+            }
     </script>
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a> 조현민</h1>
+    <input type="button" value="night" onclick="nightDayHandler(this)"/>
     <div id="grid">
       <ol>
         <li><a href="1HTML.html">HTML</a></li>
